--- a/style/autocomplete.css
+++ b/style/autocomplete.css
@@ -6,9 +6,9 @@
 }
 
 .autocomplete input{
-  font-size: 1.2em;
+  /*font-size: 1.2em;
   width: 100%;
-  padding:0.4em;
+  padding:0.4em;*/
 }
 
 .autocomplete ul{
@@ -18,7 +18,7 @@
   border-left: 1px solid #888;
   border-right: 1px solid #888;
   border-bottom: 1px solid #888;
-  z-index: 1;
+  z-index: 2;
 }
 
 .autocomplete li{
